Fix log viewer flickering issue

--- a/app/root/root.css
+++ b/app/root/root.css
@@ -968,6 +968,11 @@ code .comment {
   overflow: visible;
 }
 
+.terminal .ReactVirtualized__Grid {
+  /* !important is needed here to override react-virtualized inline style attribute */
+  overflow-x: scroll !important;
+}
+
 .terminal a {
   display: none;
 }
